# 3d-prints-monorepo

./: .gitignore  podstawka.ipynb  pyproject.toml
notebooks/: mx_key.ipynb  podstawka-ostrzenie.ipynb  podstawka.ipynb
