[project]
name = "3D-prints-monorepo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.3.0",
    "ipython>=9.14.1",
    "jupyterscad>=1.0",
    "solidpython2>=2.1.3",
]

[dependency-groups]
dev = [
    "isort>=8.0.1",
    "ruff>=0.15.17",
]
